--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,17 @@
   width: 21cm;
   height: 29.7cm;
   background-color: #fff;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-content: start;
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: transparent;
+  gap: 20px;
+}
+
+.resume-container h2 {
+  background-color: #f3f5f6;
 }
 
 #root {
@@ -37,6 +48,16 @@ input {
   border: none;
   background-color: #f3f5f6;
   padding: 12px;
+}
+
+textarea {
+  border-radius: 12px;
+  border: none;
+  background-color: #f3f5f6;
+  padding: 12px;
+  height: 150px;
+  font-size: 14px;
+  resize: none;
 }
 
 .button-container {
@@ -56,7 +77,7 @@ input {
   font-weight: 600;
 }
 .btn:hover {
-  background-color: #033592;
+  background-color: #02286e;
 }
 .input-group {
   display: flex;
@@ -140,6 +161,12 @@ label {
   gap: 20px;
 }
 
+.flex-gap {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 .date {
   min-width: 150px;
 }
@@ -148,14 +175,30 @@ label {
   font-weight: 600;
 }
 
+.educ-list {
+  display: flex;
+  align-items: center;
+  background-color: #f3f4f6;
+  margin-bottom: 10px;
+}
 .selectBtn {
-  width: 100%;
+  width: 80%;
   border: none;
   font-weight: 600;
   padding: 20px;
   font-size: 1rem;
+
+  background-color: #f3f4f6;
+}
+
+.deleteBtn {
+  width: 20%;
+  border: none;
+
+  font-size: 1rem;
   cursor: pointer;
-  margin-bottom: 10px;
+
+  background-color: #f3f4f6;
 }
 
 .flex {
