--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,15 @@
   gap: 24px;
   max-width: 1350px;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1195px) {
   .app {
     flex-direction: column;
+    width: 22cm;
+    box-sizing: border-box;
+  }
+  .form-container {
+    box-sizing: border-box;
+    width: 21cm;
   }
 }
 
